more Chapter 4 updates

--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -17,8 +17,7 @@ The second major source of heat within the Earth is the decay of radioactive iso
 
 \subsection{Heat Measurements}\label{ch2:heatmeas}
 \subsubsection{Geothermal Gradient}\label{ch2:geotherm}
-Average subsurface conditions show a steady increase in temperature with depth, commonly referred to as the geothermal gradient, which is sustained by the flow of original accretionary heat and generated radioactive heat. On average, the gradient for continental crust is $\approx30%^\circ
-$K%C
+Average subsurface conditions show a steady increase in temperature with depth, commonly referred to as the geothermal gradient, which is sustained by the flow of original accretionary heat and generated radioactive heat. On average, the gradient for continental crust is $\approx30$ K%C
 /km \citep[p.\ 209]{press_understanding_2004}. However, deviations from this value are common and reflect the complexity of the rock record in an area. The crust comprises %a
 distinct %set of
 layers, or strata, that vary in composition and rock type. Unlike igneous formations that can be relatively homogeneous, surface processes mix sediments from a variety of original source rocks, sometimes sorting them well and sometimes not, before they get deposited and indurated into sedimentary formations \citep[p.\ 164--168]{press_understanding_2004}. Alteration from fluids, heat, and pressure can then modify the composition of these rocks, causing constituent minerals to change form and arrangement to create metamorphic rocks \citep[p.\ 195--205]{press_understanding_2004}. The spatial and depth variations in these formations create subsurface compositional heterogeneity, directly reflected in rock properties. Thermal conductivity, specifically the ability to move deep-sourced heat to shallower depths, and radioactive element abundance, or the ability to generate additional heat in situ, varies in all directions in the subsurface. Thermal heterogeneity can be further compounded by anomalies created from salt movement \citep[p.\ 164--168]{press_understanding_2004}, magmatic intrusions, or global tectonic processes. Geology and geologic history therefore play an important role in defining the geothermal gradient of an area.
@@ -36,10 +35,11 @@ Conduction dominates on local scales in the crust, while convection is the prima
 \begin{equation}\label{eq:convection}
 \frac{\partial T}{\partial t} = \frac{1}{\rho c_P}\nabla\bullet\left(k\nabla T\right)-{\bf u}\bullet\nabla T
 \end{equation}
-where \textbf{u} = ($u_x$, $u_z$) is the velocity of the fluid, $\rho$ is the material density, and $c_P$ is the specific heat, which defines the amount of heat necessary to raise 1 kg of that material by $1$ K. Convection combines heat transfer from conduction with mass movement. Since the minerals are relatively poor conductors of heat, the combined effects of lower viscosity and thermal expansion --– as seen near the core-mantle boundary –- and gravitational forces responsible for buoyancy effects, all create the right conditions for convective flow \citep[p.\ 25]{glassley_geothermal_2015}. Mantle convection is responsible for the high heat flow values observed at crustal plate boundaries like mid-ocean ridges, as well as intraplate diapiric hot spots underlying Hawaii, Yellowstone, and several other locations around the world. Smaller-scale convection also takes place at subduction zones where the material from the down-diving plate melts at lower temperatures with the presence of water, migrates upwards, and forms volcanic arcs on the surface as observed in Japan, Indonesia, and the Pacific Northwest of the U.S. \citep[p.\ 31-33]{press_understanding_2004} --– all locations with geothermal potential.
+where \textbf{u} = ($u_x$, $u_z$) is the velocity of the fluid, $\rho$ is the material density, and $c_P$ is the specific heat, which defines the amount of heat necessary to raise 1 kg of that material by $1$ K. Convection combines heat transfer from conduction with mass movement. Since the minerals are relatively poor conductors of heat, the combined effects of lower viscosity and thermal expansion --– as seen near the core-mantle boundary –- and gravitational forces responsible for buoyancy effects, all create the right conditions for convective flow \citep[p.\ 25]{glassley_geothermal_2015}. Mantle convection is responsible for the high heat-flow values observed at crustal-plate boundaries like mid-ocean ridges, as well as intraplate diapiric hot spots underlying Hawaii, Yellowstone, and several other locations around the world. Smaller-scale convection also takes place at subduction zones where the material from the down-diving plate melts at lower temperatures with the presence of water, migrates upwards, and forms volcanic arcs on the surface as observed in Japan, Indonesia, and the Pacific Northwest of the U.S.\ \citep[p.\ 31-33]{press_understanding_2004} --– all locations with geothermal potential.
 
-Heat flow measurements capture the flux of heat through the Earth’s surface as a result of these and other complex processes taking place in the subsurface. In this respect, it serves as a simpler and more accessible metric for local or regional heat potential than the more sparsely-measured geothermal gradient. Today, high-quality heat flow measurements can be obtained in marine conditions, along continental margins, on mid-ocean ridges, and from the multitude wells drilled by the oil \& gas industry, supporting the creation of large heat flow data sets like the New Global Heat Flow Database \citep{lucazeau_analysis_2019}. As Figure \ref{fig:heatflow} shows, data from these collections can be gridded to create spectacular maps of heat flow variations around the world. These maps offer a good starting point for quickly targeting where the greatest geothermal potential exists at the regional scale, which can then be further refined through additional methods (see Section \ref{ch2:geoexp}).
-\begin{figure}[h!]
+Heat-flow measurements capture the flux of heat through the Earth’s surface as a result of these and other complex processes taking place in the subsurface. In this respect, it serves as a simpler and more accessible metric for local or regional heat potential than the more sparsely-measured geothermal gradient. Today, high-quality heat flow measurements can be obtained in marine conditions, along continental margins, on mid-ocean ridges, and from the multitude of wells drilled by the oil \& gas industry, supporting the creation of large heat-flow data sets like the New Global Heat Flow Database \citep{lucazeau_analysis_2019}. As Figure \ref{fig:heatflow} shows, data from these collections can be gridded to create spectacular maps of heat flow variations around the world. These maps offer a good starting point for quickly targeting where the greatest geothermal potential exists at the regional scale, which can then be further refined through additional methods (see Section \ref{ch2:geoexp}).
+
+\begin{figure}%[h!]
 \centering
 \includegraphics[scale=0.45]{Figure-HeatFlowMap}
 \caption[Heat flow across the continental U.S.]{Heat flow estimates for the continental United States, plotted in Google Earth with data layer from \protect\citep{lucazeau_analysis_2019}}
@@ -47,25 +47,29 @@ Heat flow measurements capture the flux of heat through the Earth’s surface as
 \end{figure}
 
 \subsection{System Fundamentals}\label{ch2:sysfund}
+
 The conventional concept of a geothermal system consists of five key entities \citep[p.\ 9]{dipippo_geothermal_2012}:
 \renewcommand{\labelenumi}{\roman{enumi}}
 \begin{enumerate}[itemsep=2pt] \label{list:sysreq}
    \item Heat source of significant size and temperature
    \item Permeability, typically in the form of a fracture network within crystalline rock
-   \item Ample volume of working fluids, e.g., water from precipitation and drainage
+   \item Ample volume of working fluids e.g., water from precipitation and drainage
    \item Impermeable sealing layer
    \item Consistent, reliable fluid recharge
 \end{enumerate}
 
 \subsubsection{Hydrothermal Systems}\label{ch2:hydro}
+
 If naturally present, the combination of these five elements defines a hydrothermal system. As water percolates down, captures heat from the permeable thermal reservoir, and gets trapped beneath the sealing caprock, a small fraction of the resource can escape to the surface to produce distinctive geothermal manifestations like fumaroles, hot pools, geysers, mud pots, and discolored or altered rocks (Figures \ref{fig:lassen-geysers} and \ref{fig:lassen-mudpot}). These features are strong indicators of hydrothermal resources at depth.
-\begin{figure}[!ht]
+
+\begin{figure}%[!ht]
 \centering
 \includegraphics[scale=.84]{Figure-Lassen-geysers3}
 \caption[Terminal Geyser, Lassen National Park]{Terminal Geyser, Lassen National Park, California. Photo credit: Author}
 \label{fig:lassen-geysers}
 \end{figure}
-\begin{figure}[htbp]
+
+\begin{figure}%[htbp]
 \centering
 \includegraphics[scale=0.27]{Figure-Lassen-mudpot}
 \caption[Mud pot, Lassen National Park]{Active mud pot and ground staining on the bank of Boiling Springs Lake, Lassen National Park, California. Photo credit: Author}
@@ -74,20 +78,21 @@ If naturally present, the combination of these five elements defines a hydrother
 
 Hydrothermal resources have been exploited by humans for many millennia. Artifacts show proto-Native American use of hydrothermal waters for cleaning and health restoration over 10,000 years ago \citep{doe_history_2021}. The importance of geothermal hot springs for Roman, Japanese, Chinese, and Ottoman baths is also well-established in the historical record \citep{lund_characteristics_2007}. Industrial use began in the 1800s with chemical extraction from geothermal steam, pools, and deposits in Larderello, Italy \citep[p.\ 251]{dipippo_geothermal_2012}. \acrlong{gdh} (\acrshort{gdh}), or large-scale heating of residences and businesses using geothermal-produced fluids, was pioneered in Chaudes-Aigues, France in the 1300s and first introduced to the United States in 1892 with an installation in Boise, Idaho \citep{lund_characteristics_2007}.
 
-These few examples show some of the many potential opportunities for low-temperature ($<90^\circ$C) and medium-temperature ($<150^\circ$C) geothermal resource use, even beyond hydrothermal systems. GDH can help meet building and water temperature needs, and agriculture, textiles, chemicals, and even the food industry can benefit from access to low-temperature geothermal resources \citep{doe_low_2021, liu_overview_2015}. Growing interest has led to dedicated funding opportunities from agencies like the \acrlong{gto} (\acrshort{gto}) within the \acrlong{doe} (\acrshort{doe}); a grant recently awarded to Cornell University supports piloting a deep direct-use geothermal project to provide baseload heating for the university campus supporting peak demand during cold upstate New York winter months  \citep{hamm_geothermal_2021,tester_integrating_2015}.
+These few examples show some of the many potential opportunities for low-temperature ($T<90^\circ$C) and medium-temperature ($90^\circ{\rm C}<T<150^\circ$C) geothermal resource use, even beyond hydrothermal systems. GDH can help meet building and water temperature needs, and agriculture, textiles, chemicals, and even the food industry can benefit from access to low-temperature geothermal resources \citep{doe_low_2021, liu_overview_2015}. Growing interest has led to dedicated funding opportunities from agencies like the \acrlong{gto} (\acrshort{gto}) within the \acrlong{doe} (\acrshort{doe}); a grant recently awarded to Cornell University supports piloting a deep direct-use geothermal project to provide baseload heating for the university campus supporting peak demand during cold upstate New York winter months  \citep{hamm_geothermal_2021,tester_integrating_2015}.
 
 The topic of this thesis instead concerns the use of moderate- to high-temperature geothermal for power generation. The first example of geothermal power production came from Italian experiments in 1904, and the first commercial plant went online in Larderello, Italy in 1914 \citep[p.\ 251]{dipippo_geothermal_2012}. Geothermal-generated electricity made its debut in the United States with the development of The Geysers field beginning in 1960 \citep{tester_future_2006}. Hydrothermal plants quickly appeared in New Zealand, Japan, Iceland, Indonesia, Kenya, Philippines and elsewhere throughout the 1970s-1980s, with continued growth through to present-day \citep{lund_characteristics_2007}. 2020 statistics from the \acrlong{irena} (\acrshort{irena}) place the United States as world leader in geothermal installed capacity (2587 MWe), followed by Indonesia (2131 MWe) and Philippines (1928 MWe) \citep{irena_country_2021} (Figure \ref{fig:irena-rank}). 
 
-\begin{figure}[!htp]
+\begin{figure}%[!htp]
 \centering
 \includegraphics[width=.8\textwidth]{templates/images/Figure-IRENA_statistics.pdf}
 \caption[Country rankings, installed geothermal capacity ]{Countries ranked by installed geothermal capacity, adapted from \protect\citep{irena_country_2021}}
 \label{fig:irena-rank}
 \end{figure}
 
-A comprehensive assessment of moderate and high-temperature \acrlong{kgra}s (\acrshort{kgra}s) by the \acrlong{usgs} (\acrshort{usgs}) determined the U.S. has conventional geothermal (hydrothermal) power generation potential of $\sim$9,000 MWe, and an additional $\sim$30,000 MWe potential exists in undiscovered resources \citep{williams_assessment_2008}. The recent DOE GeoVision study notes hydrothermal potential in Alaska and Hawaii alone are $\sim$8000 MWe due to their unique tectonic environments (Aleutian subduction zone and Hawaiian hot spot, respectively), and high-case model estimates for the continental U.S. forecast an installed capacity of $\sim$16.5 GW by 2050 for known and unknown hydrothermal resources \citep{augustine_geovision_2019,hamm_overview_2019}.
+A comprehensive assessment of moderate and high-temperature \acrlong{kgra}s (\acrshort{kgra}s) by the \acrlong{usgs} (\acrshort{usgs}) determined the U.S.\ has conventional geothermal (hydrothermal) power generation potential of $\approx9,000$ MWe, and an additional $\approx30,000$ MWe potential exists in undiscovered resources \citep{williams_assessment_2008}. The recent DOE GeoVision study notes hydrothermal potential in Alaska and Hawaii alone are $\approx8000$ MWe due to their unique tectonic environments (Aleutian subduction zone and Hawaiian hot spot, respectively), and high-case model estimates for the continental U.S.\ forecast an installed capacity of $\approx16.5$ GW by 2050 for known and unknown hydrothermal resources \citep{augustine_geovision_2019,hamm_overview_2019}.
 
 \subsubsection{Enhanced Geothermal Systems}\label{ch2:egs}
+
 In some cases, the potential for a geothermal system exists even when one or more of the fundamental elements listed in Section \ref{ch2:sysfund} are missing. These unconventional geothermal systems, often referred to as \acrlong{egs} (\acrshort{egs}), contain a significant heat source but lack either the adequate permeability or sufficient rechargeable working fluids to meet the requirements of a hydrothermal system. A broader definition for EGS includes thermal production from sedimentary and crystalline tight rock, poorly-performing hydrothermal systems, co-production from oil \& gas operations, and even thermal recovery directly from magma \citep{tester_future_2006}. Focusing on the more common tight rock scenario, EGS systems work by artificially creating or improving reservoir permeability and ensuring sustained flow rates of fluids through the reservoir \citep[p.\ 281]{glassley_geothermal_2015}. Fluids pumped down an injection well pass through a stimulated fracture network. Heat from the thermal reservoir warms the fluid before it returns to the surface via one or more producing wells and enters a power plant to produce electricity (Figure \ref{fig:egs_schematic}). Reservoir stimulation generally involves hydraulic fracturing (hydro-fracking or just “fracking”) techniques to create pathways connecting injector-producer pairs. The technology and field capabilities are thus well-aligned with unconventional oil \& gas operations \citep{petty_synergies_2009}. 
 
 \begin{figure}[htp!]
@@ -97,21 +102,26 @@ In some cases, the potential for a geothermal system exists even when one or mor
 \label{fig:egs_schematic}
 \end{figure}
 
-EGS can provide the bridge between geothermal use in niche hydrothermal environments and a more comprehensive adoption of geothermal energy for electricity generation across the United States. The sources of subsurface heat (see Section \ref{ch2:heatorig}) exist everywhere, so accessing a range of temperatures that could support power production relies on drilling deep enough and creating the artificial conditions necessary for heat capture. \acrlong{lanl} (\acrshort{lanl}) validated the EGS approach in crystalline rock at Fenton Hill beginning in 1974. Feasibility studies followed soon thereafter in Japan, Germany, the U.K., and France \citep{breede_systematic_2013}. Among the most notable EGS projects that provided key lessons learned are The Geysers (U.S), Soultz-sous-Forêts (France), and Cooper Basin (Australia). The Geysers stands out as the largest geothermal power-generating complex in the world, providing $\sim$1,000 MWe for California even after 60 years of steam production \citep{jelacic_evaluation_2008,williams_assessment_2008}. Although drilling issues and public concern over induced seismicity halted efforts \citep{manish03_united_2009}, rock stimulation experiments in the Northwest Geysers proved distinct reservoirs can be developed adjacent to active hydrothermal operations \citep{pan_establishment_2019}. The Soultz project commenced in 1987 with one injector and two producers drilled to 5 km depth to support a 1.5 MW power plant built in 2007-2008 \citep[p.\ 463]{dipippo_geothermal_2012}. In addition to many experimental lessons learned around drilling, hydrofracturing, chemical stimulation, scaling and corrosion, Soultz today supports both electricity production and direct-use district heating \citep{durst_overview_2013}. Cooper Basin, the largest EGS demonstration project in the world, showed great promise after a 6-year proof of concept phase \citep{stephens_assessing_2010}. However, the project halted in 2015 due poor stimulation results tied to an unrecognized fault, highlighting the importance of robust structural appraisal in assessing geothermal prospects \citep{holl_what_2015}. 
+EGS can provide the bridge between geothermal use in niche hydrothermal environments and a more comprehensive adoption of geothermal energy for electricity generation across the United States. The sources of subsurface heat (see Section \ref{ch2:heatorig}) exist everywhere, so accessing a range of temperatures that could support power production relies on drilling deep enough and creating the artificial conditions necessary for heat capture. \acrlong{lanl} (\acrshort{lanl}) validated the EGS approach in crystalline rock at Fenton Hill beginning in 1974. Feasibility studies followed soon thereafter in Japan, Germany, the U.K., and France \citep{breede_systematic_2013}. Among the most notable EGS projects that provided key lessons %learned
+are The Geysers (U.S.), Soultz-sous-Forêts (France), and Cooper Basin (Australia). The Geysers stands out as the largest geothermal power-generating complex in the world, providing $\approx1,000$ MWe for California even after 60 years of steam production \citep{jelacic_evaluation_2008,williams_assessment_2008}. Although drilling issues and public concern over induced seismicity halted efforts \citep{manish03_united_2009}, rock-stimulation experiments in the Northwest Geysers proved distinct reservoirs can be developed adjacent to active hydrothermal operations \citep{pan_establishment_2019}. The Soultz project commenced in 1987 with one injector and two producers drilled to 5 km depth to support a 1.5 MW power plant built in 2007-2008 \citep[p.\ 463]{dipippo_geothermal_2012}. In addition to many experimental lessons learned around drilling, hydrofracturing, chemical stimulation, scaling and corrosion, Soultz today supports both electricity production and direct-use district heating \citep{durst_overview_2013}. Cooper Basin, the largest EGS demonstration project in the world, showed great promise after a 6-year proof-of-concept phase \citep{stephens_assessing_2010}. However, the project halted in 2015 due poor stimulation results tied to an unrecognized fault, highlighting the importance of robust structural appraisal in assessing geothermal prospects \citep{holl_what_2015}. 
 
-As the fate of these projects might suggest, the long-standing promise of EGS has not yet been fully realized. However, several active projects supported by the \acrlong{nrel} (\acrshort{nrel}) and the DOE (e.g. EDGE, FORGE, EGS Collab) are providing the insights necessary to mature subsurface models, drilling technologies, and stimulation methods for more widespread EGS adoption \citep{hamm_geothermal_2021}. And recent technology advances and partnerships involving start-ups Fervo Energy \citep{moss_google_2021,shieber_geothermal_2021}, Deep Earth Energy \citep{geoenergy_saskatchewan_2021}, Eavor Technologies \citep{ross_energy_2020}, and Climeon \citep{climeon_climeon_2021,geoenergy_baseload_2020} show there is a growing fervor to overcome the technology roadblocks currently holding EGS back. Projections show the size of the prize with success in EGS. Assuming a maximum cut-off depth of 7 km and a minimum reservoir temperature of 150$^\circ$C, the EGS resource potential for electricity production in the continental United States might be at least 5,150 GWe, with an additional $\sim$1,500 MWe from Near Hydrothermal Field-EGS (\acrshort{nfegs}) \citep{augustine_geovision_2019}. To put this opportunity into context: the total utility-scale electricity generation capacity from \underline{all} sources in the United States was $\sim$1,200 GWe in 2019, over 4x less in magnitude than the predicted EGS potential \citep{eia_electric_2020}.
+As the fate of these projects might suggest, the long-standing promise of EGS has not yet been fully realized. However, several active projects supported by the \acrlong{nrel} (\acrshort{nrel}) and the DOE (e.g., EDGE, FORGE, EGS Collab) are providing the insights necessary to mature subsurface models, drilling technologies, and stimulation methods for more widespread EGS adoption \citep{hamm_geothermal_2021}. And recent technology advances and partnerships involving start-ups Fervo Energy \citep{moss_google_2021,shieber_geothermal_2021}, Deep Earth Energy \citep{geoenergy_saskatchewan_2021}, Eavor Technologies \citep{ross_energy_2020}, and Climeon \citep{climeon_climeon_2021,geoenergy_baseload_2020} show there is a growing fervor to overcome the technology roadblocks currently holding EGS back. Projections show the size of the prize with success in EGS. Assuming a maximum cut-off depth of 7 km and a minimum reservoir temperature of 150$^\circ$C, the EGS resource potential for electricity production in the continental United States might be at least 5,150 GWe, with an additional $\approx1,500$ MWe from Near Hydrothermal Field-EGS (\acrshort{nfegs}) \citep{augustine_geovision_2019}. To put this opportunity into context: the total utility-scale electricity generation capacity from \underline{all} sources in the United States was $\approx1,200$ GWe in 2019, over 4$\times$ less in magnitude than the predicted EGS potential \citep{eia_electric_2020}.
 
 \section{Geothermal Exploration}\label{ch2:geoexp}
+
 \subsection{Background}
+
 Historically, the identification of geothermal resources primarily relied on surface expressions of hot fluids circulating at depth. Quite simply, if a bubbling hot spring or a geyser was present, you had a working hydrothermal system. Some of the first sites for geothermal power production, like Larderello and The Geysers, were (unsurprisingly) targeted because of their tell-tale surface characteristics \citep[p.\ 111]{glassley_geothermal_2015}. However, this prospecting method only applies to fully-functioning hydrothermal systems, and not all such systems have surface manifestations if fluids remain trapped beneath a subsurface impermeable seal. These hidden or “blind” geothermal resources require more sophisticated exploration methods to identify and assess accurately.
 
 \subsection{Regional Exploration}
-Regional evaluation techniques classically relied on sparse borehole data, including water wells and oil \& gas wells, to map out the geothermal potential of the U.S. \citep{kehle_aapg_1970}. Successive efforts led to progressively more comprehensive collections of surface heat flow and borehole temperature measurements \citep{blackwell_temperature-at-depth_2011, blackwell_heat_1990, muffler_assessment_1979, sorey_low-temperature_1983, wisian_heat_1999}, now widely-available with other geothermal data through the DOE-funded \acrlong{ngds} (\acrshort{ngds}) platform \citep{anderson_national_2013}. These efforts supported a better understanding of broad trends directly tied to tectonic provinces in the United States. Subduction and transform plate boundaries in the West, combined with extension in the Basin and Range, make this area of the U.S. more susceptible to high heat flow, high geothermal gradient, and greater potential for hydrothermal system activity \citep{mariner_low-temperature_1983}. Passive margins on the Atlantic and Gulf of Mexico sides make those regions less likely to host significant hydrothermal systems, although surveys have identified sedimentary basins with elevated heat flow in the south (Louisiana-Arkansas), central (Iowa-Illinois, Nebraska-South Dakota), and eastern (Appalachians) parts of the country \citep{blackwell_geothermal_1995, sorey_low-temperature_1983}.
+
+Regional evaluation techniques classically relied on sparse borehole data, including water wells and oil \& gas wells, to map out the geothermal potential of the U.S. \citep{kehle_aapg_1970}. Successive efforts led to progressively more comprehensive collections of surface heat flow and borehole temperature measurements \citep{blackwell_heat_1990, blackwell_temperature-at-depth_2011, muffler_assessment_1979, sorey_low-temperature_1983, wisian_heat_1999}, now widely-available with other geothermal data through the DOE-funded \acrlong{ngds} (\acrshort{ngds}) platform \citep{anderson_national_2013}. These efforts supported a better understanding of broad trends directly tied to tectonic provinces in the United States. Subduction and transform plate boundaries in the West, combined with extension in the Basin and Range, make this area of the U.S.\ more susceptible to high heat flow, high geothermal gradient, and greater potential for hydrothermal system activity \citep{mariner_low-temperature_1983}. Passive margins on the Atlantic and Gulf of Mexico sides make those regions less likely to host significant hydrothermal systems, although surveys have identified sedimentary basins with elevated heat flow in the south (Louisiana-Arkansas), central (Iowa-Illinois, Nebraska-South Dakota), and eastern (Appalachians) parts of the country \citep{blackwell_geothermal_1995, sorey_low-temperature_1983}.
 
 \subsection{Sub-regional Exploration}
-Continental maps provide a super-regional view of geothermal prospectivity, but further refinement is required to progress an exploration program. Specifically, the determination of regional plays and local prospects must come before deciding where and how to develop a geothermal field, e.g., for electricity generation. Characterization activities can be decomposed into defining the magnitude and extent of four earth subsystems: structural, stratigraphic, hydrologic, and thermal. The main types of surveys associated with each subsystem are listed in Table \ref{tab:surveytypes} and discussed briefly in the following section. Note that the various survey methods typically provide information on multiple subsystems. The associated non-uniqueness of subsurface interpretations based on these survey results highlights the need to integrate multiple lines of evidence for exploration activities. 
 
-\begin{table}[!htp]
+Continental maps provide a super-regional view of geothermal prospectivity, but further refinement is required to progress an exploration program. Specifically, the determination of regional plays and local prospects must come before deciding where and how to develop a geothermal field e.g., for electricity generation. Characterization activities can be decomposed into defining the magnitude and extent of four earth subsystems: structural, stratigraphic, hydrologic, and thermal. The main types of surveys associated with each subsystem are listed in Table \ref{tab:surveytypes} and discussed briefly in the following section. Note that the various survey methods typically provide information on multiple subsystems. The associated non-uniqueness of subsurface interpretations based on these survey results highlights the need to integrate multiple lines of evidence for exploration activities. 
+
+\begin{table}%[!htp]
 \begin{tabular}{ll}
 \textbf{Structural}     & \textbf{}                                                \\ \hline
 Aerial survey           & surface fault traces                                     \\
@@ -153,14 +163,15 @@ Resistivity survey      & thermal conductivity, temperature gradient            
 Seismic survey          & depth to mantle, intrusive igneous features              \\
 Temperature survey      & heat flow, geothermal gradient                          
 \end{tabular}
-\caption[Data collection methods for geothermal derisking]{Data collection methods useful for characterizing Earth subsystems that influence geothermal favorability.}
+\caption[Data-collection methods for geothermal derisking]{Data collection methods useful for characterizing Earth subsystems that influence geothermal favorability.}
 \label{tab:surveytypes}
 \end{table}
 
 \subsubsection{Geologic Data Collection}
+
 Geologic field mapping in an area can provide crucial direct evidence supporting the presence of geothermal systems. Surface manifestations like geysers, vents, and mud pots may also be coincident with mappable mineralogic indicators of the subsurface chemistry and style of geothermal activity.  Volcanic-based geothermal systems tend to have acid-sulfate waters with hydrogen sulfide-rich brines that leave behind sulfur deposits \citep[p.\ 123]{glassley_geothermal_2015}. Bicarbonate geothermal waters can produce distinctive travertine terraces or subaqueous tufa deposits, as well as a unique variety of K-spar called adularia \citep[p.\ 125]{glassley_geothermal_2015}. And chloride geothermal fluids are known to precipitate sinter or geyserite deposits composed of opal or amorphous silica \citep[p.\ 125]{glassley_geothermal_2015}. Elevated abundances of trace elements like boron and lithium typically occur in chloride brines compared to meteoric (derived from precipitation) waters, so their presence in mineral assemblages is also diagnostic \citep{bielicki_hydrogeolgic_2015, millot_multi-isotopic_2007}. Other valuable products of a geologic survey include maps of surface fault patterns to better constrain the structural history, as well as volcanic intrusive (dikes) and extrusive (flows) features for understanding the thermal history and potential deeper reservoir potential.
 
-Direct geochemical analysis of springs, pools, and samples collected from wells provides additional insights into the hydrologic characteristics of an area. Water chemistry offers information on the dominant resource fluid phase (vapor vs. liquid), the temperature of the subsurface formations encountered by the fluids, and the nature of the original water source \citep[p.\ 25]{dipippo_geothermal_2012}. The concentration or equilibria of different elements, e.g., quartz, chalcedony, sodium, potassium, and calcium, can be compared to empirically-derived trends for reservoir temperature estimates \citep[p.\ 157]{glassley_geothermal_2015}. These geothermometry methods offer insights into the deep thermal regime, although uncertainty around fluid migration pathways disallows any clear designation of the exact location and depth of a thermal reservoir.
+Direct geochemical analysis of springs, pools, and samples collected from wells provides additional insights into the hydrologic characteristics of an area. Water chemistry offers information on the dominant resource fluid phase (vapor vs.\ liquid), the temperature of the subsurface formations encountered by the fluids, and the nature of the original water source \citep[p.\ 25]{dipippo_geothermal_2012}. The concentration or equilibria of different elements e.g., quartz, chalcedony, sodium, potassium, and calcium, can be compared to empirically-derived trends for reservoir-temperature estimates \citep[p.\ 157]{glassley_geothermal_2015}. These geothermometry methods offer insights into the deep thermal regime, although uncertainty around fluid migration pathways disallows any clear designation of the exact location and depth of a thermal reservoir.
 
 Field methods like water sampling and geologic mapping provide local insights that can be aggregated for a bigger picture understanding of an area, with the caveat that field data are often limited in number and spatial distribution. Aerial and satellite surveys gather regionally-extensive measurements without the spatial sampling bias implicit in field activities. High-resolution topography captured in \acrlong{dem} (\acrshort{dem}) and DEM gradient (slope) can reveal morphology patterns tied to surface water drainage and recharge potential for deeper geothermal systems. Other optical products provide additional information of value; infrared imagery captures thermal anomalies in the shallow subsurface, stereographic images emphasize fault offsets missed in the field, and hyperspectral imaging can discriminate between different mineral assemblages, including geothermally-sourced boron-rich accumulations \multicitep{dipippo_geothermal_2012, p.\ 22;glassley_geothermal_2015, p.\ 154-155}.
 
@@ -234,7 +245,7 @@ This thesis considers a modeling approach where all three types of uncertainty a
 
 The area of interest (AOI) for the geothermal exploration section of this thesis is a 37,600 square mile region of southwest New Mexico covered by nine counties: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo (Figure \ref{fig:phys-provinces}). This region defines the conjunction of four significant geologic provinces. The Southern Basin and Range province extends across the lower third of the AOI. To the east lies the Rio Grande Rift, marked today by the course of the Rio Grande river. The Colorado Plateau covers the north of the study area, and the central-west region is blanketed by the Mogollon-Datil Volcanic Field. The unique environments presented by each province may have implications on geothermal favorability \citep{pepin_new_2018} (Figure \ref{fig:phys-provinces}).
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 \centering
 \includegraphics[scale=.65]{Figure-Physiographic-White.pdf}
 \caption[Physiographic provinces of southwest New Mexico]{Physiographic provinces within the southwest New Mexico study area. Thick black line defines the AOI. Thinner black lines outline the province boundaries. County boundaries shown in light white lines. Plot data from \protect\citep[~Figure 2-2]{bielicki_hydrogeolgic_2015}.}
