--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,63 @@
 
+@article{lowry_geovision_2017,
+	title = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}: {Reservoir} {Maintenance} and {Development}},
+	abstract = {This report documents the key findings from the Reservoir Maintenance and Development (RM\&D) Task of the U.S. Department of Energy’s (DOE), Geothermal Technologies Office (GTO) Geothermal Vision Study (GeoVision Study). The GeoVision Study had the objective of conducting analyses of future geothermal growth based on sets of current and future geothermal technology developments. The RM\&D Task is one of seven tasks within the GeoVision Study with the others being, Exploration and Confirmation, Potential to Penetration, Institutional Market Barriers, Environmental and Social Impacts, Thermal Applications, and Hybrid Systems. The full set of findings and the details of the GeoVision Study can be found in the final GeoVision Study report on the DOE-GTO website. As applied here, RM\&D refers to the activities associated with developing, exploiting, and maintaining a known geothermal resource. It assumes that the site has already been vetted and that the resource has been evaluated to be of sufficient quality to move towards full-scale development. It also assumes that the resource is to be developed for power generation, as opposed to low-temperature or direct use applications. This document presents the key factors influencing RM\&D from both a technological and operational standpoint and provides a baseline of its current state. It also looks forward to describe areas of research and development that must be pursued if the development geothermal energy is to reach its full potential.},
+	language = {en},
+	author = {Lowry, Thomas S and Finger, John T and Carrigan, Charles R and Foris, Adam and Kennedy, Mack B and Corbet, Thomas F and Doughty, Christine A and Pye, Stephen and Sonnenthal, Eric L},
+	year = {2017},
+	pages = {80},
+}
+
+@misc{us_bls_ppi_2021,
+	title = {{PPI} industry data for {Electric} power generation-{Utilities}},
+	url = {https://data.bls.gov/timeseries/PCU2211102211104},
+	language = {en},
+	urldate = {2021-07-09},
+	author = {{U.S. BLS}},
+	year = {2021},
+	note = {not seasonally adjusted
+Bureau of Labor Statistics Data},
+}
+
+@misc{eere_getem_2012,
+	title = {{GETEM} -{Geothermal} {Electricity} {Technology} {Evaluation} {Model}},
+	url = {https://www.energy.gov/eere/geothermal/getem-manuals-and-revision-notes},
+	language = {en},
+	publisher = {U.S. Department of Energy},
+	author = {{EERE}},
+	year = {2012},
+	note = {Office of Energy Efficiency \& Renewable Energy},
+}
+
+@techreport{freeman_system_2018,
+	address = {United States},
+	type = {Technical {Report}},
+	title = {System {Advisor} {Model} ({SAM}) general description (version 2017.9. 5)},
+	url = {doi:10.2172/1440404},
+	number = {NREL/TP-6A20-70414},
+	institution = {National Renewable Energy Lab.(NREL), Golden, CO (United States)},
+	author = {Freeman, Janine M and DiOrio, Nicholas A and Blair, Nathan J and Neises, Ty W and Wagner, Michael J and Gilman, Paul and Janzou, Steven},
+	year = {2018},
+}
+
+@article{bonafin_repowering_2019,
+	title = {The {Repowering} of the {Lightning} {Dock} {Geothermal} {Plant} in {New} {Mexico}},
+	volume = {48},
+	number = {6},
+	journal = {Geothermal Resources Council Bulletin},
+	author = {Bonafin, Joseph and Dickey, Halley K},
+	year = {2019},
+	pages = {34--40},
+}
+
+@mastersthesis{winther_power_2018,
+	address = {Gothenburg, Sweden},
+	title = {Power production from excess heat in a district heating system},
+	school = {Chalmers University of Technology},
+	author = {Winther, Jonathan},
+	year = {2018},
+}
+
 @article{fawcett_introduction_2006,
 	title = {An introduction to {ROC} analysis},
 	volume = {27},
@@ -62,14 +121,6 @@ NTRS Research Center: Marshall Space Flight Center (MSFC)},
 	institution = {Sandia National Lab.(SNL-NM), Albuquerque, NM (United States)},
 	author = {Blankenship, Douglas A},
 	year = {2016},
-}
-
-@article{lowry_geovision_nodate,
-	title = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}: {Reservoir} {Maintenance} and {Development}},
-	abstract = {This report documents the key findings from the Reservoir Maintenance and Development (RM\&D) Task of the U.S. Department of Energy’s (DOE), Geothermal Technologies Office (GTO) Geothermal Vision Study (GeoVision Study). The GeoVision Study had the objective of conducting analyses of future geothermal growth based on sets of current and future geothermal technology developments. The RM\&D Task is one of seven tasks within the GeoVision Study with the others being, Exploration and Confirmation, Potential to Penetration, Institutional Market Barriers, Environmental and Social Impacts, Thermal Applications, and Hybrid Systems. The full set of findings and the details of the GeoVision Study can be found in the final GeoVision Study report on the DOE-GTO website. As applied here, RM\&D refers to the activities associated with developing, exploiting, and maintaining a known geothermal resource. It assumes that the site has already been vetted and that the resource has been evaluated to be of sufficient quality to move towards full-scale development. It also assumes that the resource is to be developed for power generation, as opposed to low-temperature or direct use applications. This document presents the key factors influencing RM\&D from both a technological and operational standpoint and provides a baseline of its current state. It also looks forward to describe areas of research and development that must be pursued if the development geothermal energy is to reach its full potential.},
-	language = {en},
-	author = {Lowry, Thomas S and Finger, John T and Carrigan, Charles R and Foris, Adam and Kennedy, Mack B and Corbet, Thomas F and Doughty, Christine A and Pye, Stephen and Sonnenthal, Eric L},
-	pages = {80},
 }
 
 @techreport{young_georeport_2019,
@@ -1088,16 +1139,6 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	author = {Pursley, Jana},
 	year = {2013},
 	pages = {3--12},
-}
-
-@article{sanford_earthquake_2002-1,
-	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 1869-1998},
-	volume = {210},
-	shorttitle = {Earthquake catalogs for {New} {Mexico} and bordering areas},
-	journal = {New Mexico Bureau of Geology and Mineral Resources Circular},
-	author = {Sanford, Allan and Lin, Kuo-Wan and Tsai, I-ching and Jaksha, Lawrence},
-	year = {2002},
-	pages = {1--9},
 }
 
 @misc{utep_gravity_2011,
@@ -2598,13 +2639,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	year = {2011},
 }
 
-@techreport{freeman_system_2018,
-	title = {System {Advisor} {Model} ({SAM}) general description (version 2017.9. 5)},
-	institution = {National Renewable Energy Lab.(NREL), Golden, CO (United States)},
-	author = {Freeman, Janine M and DiOrio, Nicholas A and Blair, Nathan J and Neises, Ty W and Wagner, Michael J and Gilman, Paul and Janzou, Steven},
-	year = {2018},
-}
-
 @article{tester_future_2006,
 	title = {The future of geothermal energy},
 	volume = {358},
@@ -2721,12 +2755,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	urldate = {2021-05-01},
 	author = {{Climeon}},
 	year = {2018},
-}
-
-@article{bonafin_repowering_2019,
-	title = {The {Repowering} of the {Lightning} {Dock} {Geothermal} {Plant} in {New} {Mexico}},
-	author = {Bonafin, Joseph and Dickey, Halley K},
-	year = {2019},
 }
 
 @misc{shieber_bill_2019,
@@ -2893,20 +2921,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	urldate = {2021-04-16},
 }
 
-@article{winther_power_2018,
-	title = {Power production from excess heat in a district heating system},
-	author = {Winther, Jonathan},
-	year = {2018},
-}
-
-@article{havsed_case_nodate,
-	title = {The {Case} for {Small}, {Scalable} and {Standardized} {Geothermal} {Power} {Plants}},
-	abstract = {This presentation will focus on how the Climeon Heat Power have introduced a new type of small scale distributed geothermal power. The system is based on standardized 150 kW modules that can be combined to create power plants from 150 kW up to about 3 MW. Climeon is currently delivering the first phase of 15 MW of distributed geothermal power on Iceland that will utilize existing geothermal resource that today are used only for heating. Each plant will have a capacity between 450-2000 kW. It will delivery power to the local community and offload the transmission grid.},
-	language = {en},
-	author = {Havsed, Ruben and Skog, Gabriella},
-	pages = {6},
-}
-
 @techreport{cunniff_final_2003,
 	title = {{FINAL} {REPORT} {ENHANCED} {GEOTHERMAL} {SYSTEMS} {TECHNOLOGY} {PHASE} {II} {ANIMAS} {VALLEY}, {NEW} {MEXICO}},
 	url = {https://www.osti.gov/biblio/820539},
@@ -3032,11 +3046,6 @@ Section: Reports},
 	title = {Geology of the {Gila} {Wilderness}-{Silver} {City} area},
 	author = {Mack, Greg and Witcher, James and Lueth, Virgil W},
 	year = {2008},
-}
-
-@article{bonafin_repowering_nodate,
-	title = {The {Repowering} of {Lightning} {Dock} {Plant} in {New} {Mexico}},
-	author = {Bonafin, Joseph and Goodman, Nick and Dickey, Halley K},
 }
 
 @misc{geoenergy_turboden_2020,
