--- a/templates/cover.tex
+++ b/templates/cover.tex
@@ -49,7 +49,7 @@
 % layout of your title page with your thesis advisor and/or the MIT 
 % Libraries before printing your final copy.
 %\title{Machine Learning and Cost Analysis for Risk Management in Geothermal Exploration and Production}
-\title{Geothermal Risk Mitigation Methods for the Energy Transition}
+\title{Geothermal Risk Mitigation Strategies for the Energy Transition}
 
 \author{Robert Chadwick Holmes}
 % If you wish to list your previous degrees on the cover page, use the 
